# practical-deep-learning

./: .gitignore  README.md  pyproject.toml
ch1/: is-it-a-bird-creating-a-model-from-your-own-data.ipynb
